# calculator

./: CMakeLists.txt  main.cpp
.github/workflows/: cmake.yml
lib/: CMakeLists.txt  calculator.cpp  calculator.h
tests/: CMakeLists.txt  tests.cpp
